minor fix in text display

--- a/myP5arrow/index.html
+++ b/myP5arrow/index.html
@@ -34,10 +34,10 @@
     <div class="vec-output">
       <p>Click and drag to draw two arrows. Press s to compute sum, d for
         difference, r to reset.</p>
-      <p>Vector #1:</p><div id="vec1"> &lt;0, 0&gt;</div>
-      <p>Vector #2:</p><div id="vec2"> &lt;0, 0&gt;</div>
-      <p>Sum:</p><div id="sum"> &lt;0, 0&gt;</div>
-      <p>Difference:</p><div id="diff"> &lt;0, 0&gt;</div>
+      <p>Vector v1:</p><div id="vec1"> &lt;0, 0&gt;</div>
+      <p>Vector v2:</p><div id="vec2"> &lt;0, 0&gt;</div>
+      <p>Sum v1+v2:</p><div id="sum"> &lt;0, 0&gt;</div>
+      <p>Difference v1-v2:</p><div id="diff"> &lt;0, 0&gt;</div>
     </div>
   </body>
 
